--- a/server/views/PoC.ejs
+++ b/server/views/PoC.ejs
@@ -19,12 +19,12 @@
         <br>
         <br>
 
-	<a href="PoC/items"> Lista oggetti in vendita </a>
+	<a href="items"> Lista oggetti in vendita </a>
 
 	<br>
         <br>
 
-	<a href="PoC/transazioni"> Lista transazioni </a>
+	<a href="transazioni"> Lista transazioni </a>
 	
 
 <%- include('footer.ejs') %>
